syntax = "proto3";
package com.example.grpc;

message ValueRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message ValueResponse {
  int32 value = 1;
}

service CalcService {
  rpc calc(ValueRequest) returns (stream ValueResponse);
}